# archilan.fr

./: .editorconfig  .env  .env.prod.example  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: quality-gates.sh  settings.json  settings.local.json
.github/: dependabot.yml
api/: .env  .env.test  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.web  composer.json  phpstan.neon
archipelago/: Dockerfile  ap_server.sh  entrypoint.sh  generate_multiworld.py  generate_template.py  introspect_options.py  reachable.py  read_save.py
bridge/: .env  BRIDGE_API.md  CLAUDE.md  Dockerfile  bridge.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
certs/: README.md
envs/: api.env.example  frontend.env.example  mercure.env.example  minio.env.example  orchestrateur.env.example  postgres.env.example  rabbitmq.env.example
frontend/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  jest.setup.ts  (+6 more)
runner/: .env  .gitignore  Dockerfile  pyproject.toml
runner/app/: api_notifier.py  apworld_storage.py  docker_manager.py  generator.py  logging_config.py  main.py  port_pool.py  server_lifecycle.py  session_store.py  slot_names.py  yaml_writer.py
runner/archipelago_runner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
runner/tests/: conftest.py  test_api_key.py  test_api_notifier.py  test_apworld_upload.py  test_bundled_template.py  test_generation.py  test_port_pool.py  test_preflight.py  test_server_lifecycle.py  test_shutdown.py  test_yaml_writer.py
(+2101 files in other folders)
