[project]
name = "archipelago-runner"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "docker>=7.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "anyio[trio]>=4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::RuntimeWarning"]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["docs archipelago", "archipelago_runner.egg-info"]

[tool.ruff.lint.per-file-ignores]
"app/main.py" = ["E402"]
"tests/*.py" = ["E402"]
